scripts/pull-domains

--- a/store/domains.yaml
+++ b/store/domains.yaml
@@ -1,2 +1,48 @@
+- domain: acuriousanimal.com
+- domain: admin-magazine.com
+- domain: api-platform.com
 - domain: apievangelist.com
+- domain: apigee.com
+- domain: apis.guru
+- domain: apis.io
+- domain: apiv2.online-convert.com
+- domain: appdevelopermagazine.com
+- domain: c-sharpcorner.com
+- domain: catalog.data.gov
+- domain: charity.3scale.net
+- domain: cloudmersive.com
+- domain: community.apigee.com
+- domain: cyclr.com
+- domain: data.gov
+- domain: developer.microsoft.com
+- domain: developer.openstack.org
+- domain: directplus.documentation.dnb.com
+- domain: discogs.com
+- domain: docs.payara.fish
+- domain: docs.stoplight.io
+- domain: dredd.readthedocs.io
+- domain: dzone.com
+- domain: ebayinc.com
+- domain: en.wikipedia.org
+- domain: etsy.com
+- domain: fastapi.tiangolo.com
+- domain: fileinfo.com
+- domain: findbestopensource.com
+- domain: infoq.com
 - domain: kinlane.com
+- domain: kubernetes.io
+- domain: magicdraw.com
+- domain: medium.com
+- domain: mrin9.github.io
+- domain: networknt.com
+- domain: neutrinoapi.com
+- domain: next.nutanix.com
+- domain: nordicapis.com
+- domain: pypi.org
+- domain: qiita.com
+- domain: solvusoft.com
+- domain: tattoocoder.com
+- domain: techbeacon.com
+- domain: thefinancialbrand.com
+- domain: twitter.com
+- domain: vmacwrites.wordpress.com
