--- a/store/domains.yaml
+++ b/store/domains.yaml
@@ -1,48 +1,86 @@
 - domain: acuriousanimal.com
 - domain: admin-magazine.com
 - domain: api-platform.com
+- domain: api.huawei.com
+- domain: api.sap.com
 - domain: apievangelist.com
 - domain: apigee.com
 - domain: apis.guru
 - domain: apis.io
 - domain: apiv2.online-convert.com
 - domain: appdevelopermagazine.com
+- domain: avxhm.is
+- domain: bloomberg.com
 - domain: c-sharpcorner.com
+- domain: carab.in
 - domain: catalog.data.gov
 - domain: charity.3scale.net
+- domain: cloudconvert.com
 - domain: cloudmersive.com
 - domain: community.apigee.com
+- domain: coursera.org
 - domain: cyclr.com
 - domain: data.gov
+- domain: dataquest.io
+- domain: dev.evernote.com
+- domain: dev.to
+- domain: devblogs.microsoft.com
+- domain: developer.ibm.com
+- domain: developer.level3.com
 - domain: developer.microsoft.com
 - domain: developer.openstack.org
+- domain: developer.salesforce.com
+- domain: developers.google.com
+- domain: developers.redhat.com
 - domain: directplus.documentation.dnb.com
 - domain: discogs.com
+- domain: doc.networknt.com
+- domain: docs.aws.amazon.com
 - domain: docs.payara.fish
 - domain: docs.stoplight.io
+- domain: docs.tuya.com
 - domain: dredd.readthedocs.io
+- domain: dunglas.fr
 - domain: dzone.com
 - domain: ebayinc.com
+- domain: editor.swagger.io
 - domain: en.wikipedia.org
 - domain: etsy.com
 - domain: fastapi.tiangolo.com
 - domain: fileinfo.com
 - domain: findbestopensource.com
+- domain: forum.huawei.com
+- domain: forum.universal-devices.com
+- domain: help.qlik.com
+- domain: imsglobal.org
 - domain: infoq.com
+- domain: jsonapi.org
 - domain: kinlane.com
 - domain: kubernetes.io
+- domain: linkedin.com
 - domain: magicdraw.com
 - domain: medium.com
 - domain: mrin9.github.io
+- domain: mulesoft.com
 - domain: networknt.com
 - domain: neutrinoapi.com
+- domain: newsapi.org
+- domain: nexmo.com
 - domain: next.nutanix.com
 - domain: nordicapis.com
+- domain: open.ys7.com
+- domain: partner.steamgames.com
+- domain: powerusers.microsoft.com
 - domain: pypi.org
 - domain: qiita.com
+- domain: smartbear.com
+- domain: soapui.org
 - domain: solvusoft.com
 - domain: tattoocoder.com
 - domain: techbeacon.com
 - domain: thefinancialbrand.com
+- domain: torocloud.com
 - domain: twitter.com
+- domain: vimeo.com
 - domain: vmacwrites.wordpress.com
+- domain: wilsonmar.github.io
